force-app/main/default/objects/KimbleOne__DeliveryGroupActor__c/KimbleOne__DeliveryGroupActor__c.object-meta.xml
<CustomObject>
    <label>Delivery Engagement Actor</label>
    <nameField>
        <label>Delivery Group Actor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Engagement Actors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>