force-app/main/default/objects/KimbleOne__DeliveryGroupActor__c/fields/KimbleOne__ActorRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActorRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor Role</label>
    <referenceTo>KimbleOne__ActorRole__c</referenceTo>
    <relationshipName>DeliveryGroupActors</relationshipName>
    <type>Lookup</type>
</CustomField>