force-app/main/default/objects/KimbleOne__DeliveryGroupActor__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <label>Delivery Engagement</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipName>DeliveryGroupActors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>